test/neg/neg-new_array1.errc
T must be default constructible
